[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Squid/oldpb0.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Squid/oldpe0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Squid/oldpd0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Squid/oldpa0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Squid/oldpc0.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Squid/oldpf0.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Ball.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Ball",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "Explode",
"speed": 15.0
} ]

[sub_resource type="SphereShape" id=2]
radius = 0.0908474

[sub_resource type="SphereShape" id=3]
radius = 0.704913

[node name="Ball" type="Area"]
script = ExtResource( 7 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00885749, 0, -0.00483894 )
frames = SubResource( 1 )
animation = "Ball"

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0122001, 0, 0 )
shape = SubResource( 2 )

[node name="SplashDamage" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="SplashDamage"]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="body_entered" from="SplashDamage" to="." method="_on_SplashDamage_body_entered"]
